--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
     "kill": "kill-port 9099 && kill-port 8080 && kill-port 9000 && kill-port 5001 && kill-port 5000 && kill-port 8085",
-    "start:dev": "firebase emulators:start"
+    "start:dev": "firebase emulators:start",
+    "start:ngrok": "ngrok http --region=us --hostname=galactic-credit-bureau.ngrok.io 3000"
   },
   "engines": {
     "node": "14"
